fix overflow in projects cards

--- a/src/style.css
+++ b/src/style.css
@@ -70,12 +70,12 @@ ul{
     font-weight: 800;
 }
 .block__text{
-    font-size: 1.5em;
+    font-size: var(--primary-size-text);
     font-weight: 300;
     line-height: 1.5em;
 }
 .home__cvtxt{
-    font-size: 1.5em;
+    font-size: var(--primary-size-text);
     font-weight: 300;
     padding: 1em 0;
 }
@@ -102,8 +102,7 @@ ul{
     grid-template-columns: 1fr 1fr;
 }
 .block{
-    padding-left: 9em;
-    padding-right: 9em;
+    padding: var(--margin-web-large);
     height: 100vh;
 }
 .block{
@@ -165,16 +164,18 @@ ul{
     bg
     border
     */
-    min-width: 250px;
+    min-width: 200px;
+    height: 100%;
+    overflow: auto;
     border: 1px solid rgba(255, 255, 255, 0.5) ;
     border-radius: var(--border-radius);
     padding: 1.5em;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(40px);
 }
+
 .proj__card:hover{
-    transform: scale(1.1);
-    margin:0 10px;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 .proj__img{
     /* 
@@ -190,7 +191,7 @@ ul{
     size
     */
     font-weight: 700;
-    font-size: 1.5em;
+    font-size: var(--primary-size-text);
     line-height: 1.5em;
     text-align: center;
 }
@@ -198,7 +199,15 @@ ul{
     /* 
     size
     */
+    position: relative;
+    width: 100%;
+    height: 155px;
+    padding-right: 5px;
     text-align: center;
+    overflow-y: scroll;
+}
+.proj__desc__l{
+    padding-left: 5px;
 }
 .proj__footer{
     /* 
@@ -246,14 +255,48 @@ ul{
 
 /* CONTACT ME */
 
-::-webkit-scrollbar{
+body::-webkit-scrollbar{
     display: none;
 }
 
+/* CARD SCROLL */
+.proj__desc::-webkit-scrollbar {
+    display: none;
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width:5px;
+}
+.proj__desc__l::-webkit-scrollbar{
+    display: block;
+}
+
+::-webkit-scrollbar-button:increment,::-webkit-scrollbar-button {
+    display: none;
+} 
+
+::-webkit-scrollbar:horizontal {
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #797979;
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;  
+}
 /* RESPONSIVE DESING */
 
 
 :root{
+    /* Body */
+    --margin-web-large:0 9em 0 9em;
+    /* Blocks */
+    --primary-size-text:1.5em;
+
     --focus-color:#E35D6A;
     --border-radius:10px;
 }
